--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,3 @@
-### TeX ###
-## Core latex/pdflatex auxiliary files:
-*.aux
-*.lof
-*.log
-*.lot
-*.fls
-*.out
-*.toc
-
-## Intermediate documents:
-*.dvi
-*-converted-to.*
-<<<<<<< HEAD
-
-### Editor ###
-## Vim & Emacs temp files:
-.*sw[op]
-*~
-
-### Mac OS X ###
-## Mac OS X metadata files:
-*.DS_Store
-
+kor/*.pdf
+eng/*.pdf
+ref/*
